# BKGraph

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.txt  TO_DO.txt
rsc/: bkgraph.desktop  resource.rc  run.sh
src/engine/: drawSys.cpp  drawSys.h  filer.cpp  filer.h  scene.cpp  scene.h  windowSys.cpp  windowSys.h  world.cpp  world.h
src/prog/: defaults.h  program.cpp  program.h  progs.cpp  progs.h
src/utils/: defaults.h  functions.cpp  functions.h  parser.cpp  parser.h  settings.cpp  settings.h  sptr.h  utils.cpp  utils.h  vec2.h
src/widgets/: context.cpp  context.h  graphView.cpp  graphView.h  layouts.cpp  layouts.h  widgets.cpp  widgets.h
